--- a/Interface_Layer/Views/Index.html
+++ b/Interface_Layer/Views/Index.html
@@ -30,6 +30,8 @@
         </nav>
     </div>
 
+    <!--<data-ng-view></data-ng-view>-->
+
     <script type="text/javascript" src="../Scripts/jquery-3.1.1.min.js" charset="UTF-8"></script>
     <script type="text/javascript" src="../Scripts/bootstrap.min.js"></script>
     <script type="text/javascript" src="../Scripts/angular.min.js"></script>
