--- a/Interface_Layer/Views/Perfiles.html
+++ b/Interface_Layer/Views/Perfiles.html
@@ -51,7 +51,7 @@
                     </div>
                 </div>
                 <div class="container-fluid form-group" data-ng-show="estaEditable">
-                    <label for="txtDescripcion" class="col-md-2 control-label">Descripcion: </label>
+                    <label for="txtDescripcion" class="col-md-2 control-label">Descripción: </label>
                     <div class="col-md-10">
                         <input type="text" class="form-control" id="txtDescripcion" placeholder="Ingrese la descripción del perfil" data-ng-model="myperfil.Descripcion" maxlength="200" />
                     </div>
@@ -78,7 +78,7 @@
                 <thead>
                     <tr>
                         <th class="col-md-4">Nombre</th>
-                        <th class="col-md-7">Descripcion</th>
+                        <th class="col-md-7">Descripción</th>
                         <th class="col-md-1"></th>
                     </tr>
                 </thead>
