--- a/Interface_Layer/Views/Permisos.html
+++ b/Interface_Layer/Views/Permisos.html
@@ -90,7 +90,7 @@
                             </div>
                         </div>
                         <div class="container-fluid form-group">
-                            <label for="cmbModulo" class="col-md-2 control-label">Modulo: </label>
+                            <label for="cmbModulo" class="col-md-2 control-label">Módulo: </label>
                             <div class="col-md-4">
                                 <select id="cmbModulo" class="form-control" ng-options="modulo.Nombre for modulo in modulos track by modulo.Id" data-ng-model="mypermiso.Modulo" ng-change="buscarMenu()"></select>
                             </div>
@@ -139,7 +139,7 @@
                             <th class="col-md-3">Usuario</th>
                             <th class="col-md-1">Rol</th>
                             <th class="col-md-1">Sistema</th>
-                            <th class="col-md-1">Modulo</th>
+                            <th class="col-md-1">Módulo</th>
                             <th class="col-md-2">Menú</th>
                             <th class="col-md-1">Opción</th>
                             <th class="col-md-1"></th>
