--- a/Interface_Layer/Views/Roles.html
+++ b/Interface_Layer/Views/Roles.html
@@ -51,7 +51,7 @@
                     </div>
                 </div>
                 <div class="container-fluid form-group" data-ng-show="estaEditable">
-                    <label for="txtDescripcion" class="col-md-2 control-label">Descripcion: </label>
+                    <label for="txtDescripcion" class="col-md-2 control-label">Descripción: </label>
                     <div class="col-md-10">
                         <input type="text" class="form-control" id="txtDescripcion" placeholder="Ingrese la descripción del rol" data-ng-model="myrol.Descripcion" maxlength="200" />
                     </div>
