--- a/Interface_Layer/Views/Menus.html
+++ b/Interface_Layer/Views/Menus.html
@@ -50,13 +50,13 @@
                     </div>
                 </div>
                 <div class="container-fluid form-group">
-                    <label for="cmbModulo" class="col-md-2 control-label">Modulo: </label>
+                    <label for="cmbModulo" class="col-md-2 control-label">Módulo: </label>
                     <div class="col-md-8">
                         <select id="cmbModulo" class="form-control" ng-options="modulo.Nombre for modulo in modulos track by modulo.Id" data-ng-model="mymenu.Modulo" ng-change="setearModulo()" required></select>
                     </div>
                 </div>
                 <div class="container-fluid form-group" data-ng-show="estaEditable">
-                    <label for="txtCodigo" class="col-md-2 control-label">Codigo: </label>
+                    <label for="txtCodigo" class="col-md-2 control-label">Código: </label>
                     <div class="col-md-2">
                         <input type="text" class="form-control" id="txtCodigo" placeholder="Ingrese el codigo del menú (obligatorio)" data-ng-model="mymenu.Codigo" maxlength="7" required />
                     </div>
@@ -74,7 +74,7 @@
                     </div>
                 </div>
                 <div class="container-fluid form-group" data-ng-show="estaEditable">
-                    <label for="txtDescripcion" class="col-md-2 control-label">Descripcion: </label>
+                    <label for="txtDescripcion" class="col-md-2 control-label">Descripción: </label>
                     <div class="col-md-10">
                         <input type="text" class="form-control" id="txtDescripcion" placeholder="Ingrese la descripción del menú" data-ng-model="mymenu.Descripcion" maxlength="200" />
                     </div>
@@ -107,11 +107,11 @@
             <table class="table table-bordered table-hover" id="tab_logic">
                 <thead>
                     <tr>
-                        <th class="col-md-1">Codigo</th>
+                        <th class="col-md-1">Código</th>
                         <th class="col-md-3">Nombre</th>
                         <th class="col-md-2">Ruta</th>
                         <th class="col-md-1">Activo</th>
-                        <th class="col-md-3">Modulo</th>
+                        <th class="col-md-3">Módulo</th>
                         <th class="col-md-1"></th>
                     </tr>
                 </thead>
