--- a/Interface_Layer/Views/MenusOpciones.html
+++ b/Interface_Layer/Views/MenusOpciones.html
@@ -50,7 +50,7 @@
                     </div>
                 </div>
                 <div class="container-fluid form-group">
-                    <label for="cmbModulo" class="col-md-2 control-label">Modulo: </label>
+                    <label for="cmbModulo" class="col-md-2 control-label">Módulo: </label>
                     <div class="col-md-8">
                         <select id="cmbModulo" class="form-control" ng-options="modulo.Nombre for modulo in modulos track by modulo.Id" data-ng-model="mymenuopcion.Modulo" ng-change="buscarMenu()" required></select>
                     </div>
@@ -102,9 +102,9 @@
                 <thead>
                     <tr>
                         <th class="col-md-2">Sistema</th>
-                        <th class="col-md-2">Modulo</th>
+                        <th class="col-md-2">Módulo</th>
                         <th class="col-md-3">Menú</th>
-                        <th class="col-md-2">Opcion</th>
+                        <th class="col-md-2">Opción</th>
                         <th class="col-md-1">Activo</th>
                         <th class="col-md-1">Visible</th>
                         <th class="col-md-1"></th>
