--- a/Interface_Layer/Views/Modulos.html
+++ b/Interface_Layer/Views/Modulos.html
@@ -50,7 +50,7 @@
                     </div>
                 </div>
                 <div class="container-fluid form-group" data-ng-show="estaEditable">
-                    <label for="txtCodigo" class="col-md-2 control-label">Codigo: </label>
+                    <label for="txtCodigo" class="col-md-2 control-label">Código: </label>
                     <div class="col-md-2">
                         <input type="text" class="form-control" id="txtCodigo" placeholder="Ingrese el codigo del módulo (obligatorio)" data-ng-model="mymodulo.Codigo" maxlength="4" required />
                     </div>
@@ -68,7 +68,7 @@
                     </div>
                 </div>
                 <div class="container-fluid form-group" data-ng-show="estaEditable">
-                    <label for="txtDescripcion" class="col-md-2 control-label">Descripcion: </label>
+                    <label for="txtDescripcion" class="col-md-2 control-label">Descripción: </label>
                     <div class="col-md-10">
                         <input type="text" class="form-control" id="txtDescripcion" placeholder="Ingrese la abreviatura del módulo" data-ng-model="mymodulo.Descripcion" maxlength="200" />
                     </div>
@@ -99,7 +99,7 @@
             <table class="table table-bordered table-hover" id="tab_logic">
                 <thead>
                     <tr>
-                        <th class="col-md-1">Codigo</th>
+                        <th class="col-md-1">Código</th>
                         <th class="col-md-4">Nombre</th>
                         <th class="col-md-2">Abreviatura</th>
                         <th class="col-md-1">Activo</th>
