--- a/Interface_Layer/Views/Opciones.html
+++ b/Interface_Layer/Views/Opciones.html
@@ -56,9 +56,9 @@
                     </div>
                 </div>
                 <div class="container-fluid form-group" data-ng-show="estaEditable">
-                    <label for="txtDescripcion" class="col-md-2 control-label">Descripcion: </label>
+                    <label for="txtDescripcion" class="col-md-2 control-label">Descripción: </label>
                     <div class="col-md-10">
-                        <input type="text" class="form-control" id="txtDescripcion" placeholder="Ingrese la descripción de la opción" data-ng-model="mymenu.Descripcion" maxlength="200" />
+                        <input type="text" class="form-control" id="txtDescripcion" placeholder="Ingrese la descripción de la opción" data-ng-model="myopcion.Descripcion" maxlength="200" />
                     </div>
                 </div>
                 <br />
@@ -83,9 +83,9 @@
             <table class="table table-bordered table-hover" id="tab_logic">
                 <thead>
                     <tr>
-                        <th class="col-md-3">Codigo</th>
-                        <th class="col-md-4">Nombre</th>
+                        <th class="col-md-3">Nombre</th>
                         <th class="col-md-4">Control Asociado</th>
+                        <th class="col-md-4">Descripción</th>
                         <th class="col-md-1"></th>
                     </tr>
                 </thead>
