--- a/Interface_Layer/Views/Sistemas.html
+++ b/Interface_Layer/Views/Sistemas.html
@@ -45,7 +45,7 @@
             <form name="frmSistema" style="width:800px;margin:0px auto;">
                 <input type="hidden" id="hdnId" data-ng-model="mysistema.Id" />
                 <div class="container-fluid form-group" data-ng-show="estaEditable">
-                    <label for="txtCodigo" class="col-md-2 control-label">Codigo: </label>
+                    <label for="txtCodigo" class="col-md-2 control-label">Código: </label>
                     <div class="col-md-2">
                         <input type="text" class="form-control" id="txtCodigo" placeholder="Ingrese el codigo del sistema (obligatorio)" data-ng-model="mysistema.Codigo" maxlength="02" required />
                     </div>
@@ -63,7 +63,7 @@
                     </div>
                 </div>
                 <div class="container-fluid form-group" data-ng-show="estaEditable">
-                    <label for="txtDescripcion" class="col-md-2 control-label">Descripcion: </label>
+                    <label for="txtDescripcion" class="col-md-2 control-label">Descripción: </label>
                     <div class="col-md-10">
                         <input type="text" class="form-control" id="txtDescripcion" placeholder="Ingrese la descripción del sistema" data-ng-model="mysistema.Descripcion" maxlength="200" />
                     </div>
@@ -118,7 +118,7 @@
             <table class="table table-bordered table-hover" id="tab_logic">
                 <thead>
                     <tr>
-                        <th class="col-md-2">Codigo</th>
+                        <th class="col-md-2">Código</th>
                         <th class="col-md-5">Nombre</th>
                         <th class="col-md-3">Abreviatura</th>
                         <th class="col-md-1">Activo</th>
