--- a/Interface_Layer/Views/Usuarios.html
+++ b/Interface_Layer/Views/Usuarios.html
@@ -43,6 +43,8 @@
         <div class="row">
             <form name="frmUsuario" style="width:800px;margin:0px auto;">
                 <input type="hidden" id="hdnId" data-ng-model="myusuario.Id" />
+                <input type="hidden" id="hdnPrimeraVez" data-ng-model="myusuario.PrimeraVez" />
+                <input type="hidden" id="hdnHaIngresado" data-ng-model="myusuario.HaIngresado" />
                 <div class="container-fluid form-group" data-ng-show="estaEditable">
                     <label for="txtUsuario" class="col-md-2 control-label">Usuario: </label>
                     <div class="col-md-6">
