--- a/Interface_Layer/Views/Sistemas.html
+++ b/Interface_Layer/Views/Sistemas.html
@@ -5,9 +5,14 @@
         <div class="col-md-4"></div>
     </div>
     <div class="container" ng-controller="SistemaCtrl">
-        <div class="alert alert-danger" data-ng-show="tieneError">
-            <strong>ERROR: </strong> {{ error }}
+        <div ng-class="tipoError" data-ng-show="tieneError">
+            <strong ng-show="tipoError=='alert alert-warning'">ADVERTENCIA: </strong>
+            <strong ng-show="tipoError=='alert alert-danger'">ERROR: </strong>
+            {{ error }}
         </div>
+        <!--<div class="alert alert-danger" data-ng-show="tieneError">
+            <strong>ERROR: </strong> {{ error }}
+        </div>-->
         <!--MANTENIMIENTO-->
         <div class="row">
             <form name="frmSistema" style="width:800px;margin:0px auto;">
@@ -108,7 +113,7 @@
                 </tbody>
             </table>
         </div>
-        <div id="divLoader" data-ng-show="loading">
+        <div id="divLoader" data-ng-show="estaCargando">
             <img id="imgLoader" src="Images/ajax-loader.gif" class="ajax-loader" />
         </div>
     </div>
